--- a/src/BankingsystemUML.fxml
+++ b/src/BankingsystemUML.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.paint.Color?>
 
 <TabPane fx:controller="BankingController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="RIGHT_TO_LEFT" prefHeight="400.0" prefWidth="685.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <tabs>
@@ -38,89 +37,12 @@
                   <TextField fx:id="loginUsernameField" layoutX="345.0" layoutY="150.0" style="-fx-alignment: center-left;" />
                   <TextField fx:id="loginPasswordField" layoutX="344.0" layoutY="229.0" style="-fx-alignment: center-left;" />
                   <Button fx:id="loginButton" layoutX="295.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="26.0" prefWidth="139.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="LogIn" />
-               </children></AnchorPane>
+               </children>
+            </AnchorPane>
         </content>
     </Tab>
     
-    <!-- Transaction Tab Second -->
-    <Tab fx:id="transactionTab" text="Transaction">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="607.0">
-               <children>
-                  <VBox prefHeight="374.0" prefWidth="600.0">
-                     <children>
-                        <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="374.0" prefWidth="695.0">
-                           <children>
-                              <Label layoutX="-35.0" layoutY="112.0" text="Amount">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <Button fx:id="cancelTransactionButton" layoutX="126.0" layoutY="237.0" mnemonicParsing="false" onAction="#handleCancelTransaction" prefHeight="26.0" prefWidth="138.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Cancel">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                              </Button>
-                              <TextField fx:id="amountField" layoutX="85.0" layoutY="104.0" prefHeight="26.0" prefWidth="134.0" style="-fx-alignment: center-left;" />
-                              <ComboBox fx:id="accountComboBox" layoutX="84.0" layoutY="39.0" prefHeight="26.0" prefWidth="130.0" />
-                              <Label layoutX="-35.0" layoutY="173.0" prefHeight="18.0" prefWidth="104.0" text="Transaction Type">
-                                 <font>
-                                    <Font size="13.0" />
-                                 </font>
-                              </Label>
-                              <ComboBox fx:id="transactionTypeComboBox" layoutX="88.0" layoutY="167.0" prefHeight="26.0" prefWidth="130.0" />
-                              <Button fx:id="continueTransactionButton" layoutX="-27.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleContinueTransaction" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Continue">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Button>
-                              <Label alignment="CENTER" layoutX="337.0" layoutY="32.0" prefHeight="19.0" prefWidth="115.0" text="Balance">
-                                 <font>
-                                    <Font size="21.0" />
-                                 </font>
-                              </Label>
-                              <TextField fx:id="balanceField" layoutX="358.0" layoutY="77.0" prefHeight="26.0" prefWidth="134.0" style="-fx-alignment: center-left;" />
-                           </children></AnchorPane>
-                     </children>
-                  </VBox>
-                  <Label layoutX="538.0" layoutY="47.0" text="Account Number">
-                     <font>
-                        <Font size="13.0" />
-                     </font>
-                  </Label>
-               </children></AnchorPane>
-      </content>
-    </Tab>
-    
-    <!-- Account Tab Third -->
-    <Tab fx:id="accountTab" text="Account">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <Button fx:id="createAccountButton" layoutX="18.0" layoutY="252.0" mnemonicParsing="false" onAction="#handleCreateAccount" prefHeight="26.0" prefWidth="124.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Create Account" />
-                  <Label layoutX="11.0" layoutY="70.0" prefHeight="26.0" prefWidth="104.0" text="Account Number" />
-                  <Label layoutX="12.0" layoutY="106.0" prefHeight="27.0" prefWidth="88.0" text="Customer ID" />
-                  <Label layoutX="10.0" layoutY="142.0" prefHeight="27.0" prefWidth="90.0" text="Account Type" />
-                  <Label layoutX="10.0" layoutY="180.0" prefHeight="27.0" prefWidth="94.0" text="Initial Balance" />
-                  <TextField fx:id="accountNumberField" layoutX="142.0" layoutY="69.0" style="-fx-alignment: center-left;" />
-                  <TextField fx:id="customerIdField" layoutX="142.0" layoutY="106.0" style="-fx-alignment: center-left;" />
-                  <TextField fx:id="accountTypeField" layoutX="142.0" layoutY="143.0" prefHeight="26.0" prefWidth="148.0" style="-fx-alignment: center-left;" />
-                  <TextField fx:id="initialBalanceField" layoutX="142.0" layoutY="179.0" style="-fx-alignment: center-left;" />
-                  <TableView fx:id="accountsTableView" layoutX="303.0" layoutY="14.0" prefHeight="290.0" prefWidth="382.0">
-                     <columns>
-                        <TableColumn prefWidth="101.60003662109375" text="Account Number" />
-                        <TableColumn prefWidth="89.60003662109375" text="Account Type" />
-                        <TableColumn prefWidth="93.60009765625" text="Initial Balance" />
-                        <TableColumn prefWidth="98.39996337890625" text="Customer ID" />
-                     </columns>
-                  </TableView>
-                  <Button fx:id="deleteAccountButton" layoutX="160.0" layoutY="252.0" mnemonicParsing="false" onAction="#handleDeleteAccount" prefHeight="26.0" prefWidth="124.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete" />
-               </children>
-            </AnchorPane>
-         </content>
-    </Tab>
-    
-    <!-- Customer Tab Fourth -->
+    <!-- Customer Tab Second -->
     <Tab fx:id="customerTab" text="Customer">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0">
@@ -163,6 +85,86 @@
         </content>
     </Tab>
     
+    <!-- Account Tab Third -->
+    <Tab fx:id="accountTab" text="Account">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="createAccountButton" layoutX="18.0" layoutY="252.0" mnemonicParsing="false" onAction="#handleCreateAccount" prefHeight="26.0" prefWidth="124.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Create Account" />
+                  <Label layoutX="11.0" layoutY="70.0" prefHeight="26.0" prefWidth="104.0" text="Account Number" />
+                  <Label layoutX="12.0" layoutY="106.0" prefHeight="27.0" prefWidth="88.0" text="Customer ID" />
+                  <Label layoutX="10.0" layoutY="142.0" prefHeight="27.0" prefWidth="90.0" text="Account Type" />
+                  <Label layoutX="10.0" layoutY="180.0" prefHeight="27.0" prefWidth="94.0" text="Initial Balance" />
+                  <TextField fx:id="accountNumberField" layoutX="142.0" layoutY="69.0" style="-fx-alignment: center-left;" />
+                  <TextField fx:id="customerIdField" layoutX="142.0" layoutY="106.0" style="-fx-alignment: center-left;" />
+                  <TextField fx:id="accountTypeField" layoutX="142.0" layoutY="143.0" prefHeight="26.0" prefWidth="148.0" style="-fx-alignment: center-left;" />
+                  <TextField fx:id="initialBalanceField" layoutX="142.0" layoutY="179.0" style="-fx-alignment: center-left;" />
+                  <TableView fx:id="accountsTableView" layoutX="303.0" layoutY="14.0" prefHeight="290.0" prefWidth="382.0">
+                     <columns>
+                        <TableColumn prefWidth="101.60003662109375" text="Account Number" />
+                        <TableColumn prefWidth="89.60003662109375" text="Account Type" />
+                        <TableColumn prefWidth="93.60009765625" text="Initial Balance" />
+                        <TableColumn prefWidth="98.39996337890625" text="Customer ID" />
+                     </columns>
+                  </TableView>
+                  <Button fx:id="deleteAccountButton" layoutX="160.0" layoutY="252.0" mnemonicParsing="false" onAction="#handleDeleteAccount" prefHeight="26.0" prefWidth="124.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete" />
+               </children>
+            </AnchorPane>
+         </content>
+    </Tab>
+    
+    <!-- Transaction Tab Fourth -->
+    <Tab fx:id="transactionTab" text="Transaction">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="607.0">
+               <children>
+                  <VBox prefHeight="374.0" prefWidth="600.0">
+                     <children>
+                        <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="374.0" prefWidth="695.0">
+                           <children>
+                              <Label layoutX="-35.0" layoutY="112.0" text="Amount">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="cancelTransactionButton" layoutX="126.0" layoutY="237.0" mnemonicParsing="false" onAction="#handleCancelTransaction" prefHeight="26.0" prefWidth="138.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Cancel">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Button>
+                              <TextField fx:id="amountField" layoutX="85.0" layoutY="104.0" prefHeight="26.0" prefWidth="134.0" style="-fx-alignment: center-left;" />
+                              <ComboBox fx:id="accountComboBox" layoutX="84.0" layoutY="39.0" prefHeight="26.0" prefWidth="130.0" />
+                              <Label layoutX="-35.0" layoutY="173.0" prefHeight="18.0" prefWidth="104.0" text="Transaction Type">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox fx:id="transactionTypeComboBox" layoutX="88.0" layoutY="167.0" prefHeight="26.0" prefWidth="130.0" />
+                              <Button fx:id="continueTransactionButton" layoutX="-27.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleContinueTransaction" prefHeight="26.0" prefWidth="99.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Continue">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
+                              <Label alignment="CENTER" layoutX="337.0" layoutY="32.0" prefHeight="19.0" prefWidth="115.0" text="Balance">
+                                 <font>
+                                    <Font size="21.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="balanceField" layoutX="358.0" layoutY="77.0" prefHeight="26.0" prefWidth="134.0" style="-fx-alignment: center-left;" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
+                  <Label layoutX="538.0" layoutY="47.0" text="Account Number">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+      </content>
+    </Tab>
+    
     <!-- Transaction History Tab Last -->
     <Tab fx:id="transactionHistoryTab" text="Transaction History">
       <content>
@@ -182,7 +184,8 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-               </children></AnchorPane>
+               </children>
+            </AnchorPane>
       </content>
     </Tab>
   </tabs>
